syntax = "proto3";

package org.xrpl.rpc.v1;

import "org/xrpl/rpc/v1/account_info.proto";
import "org/xrpl/rpc/v1/fee.proto";
import "org/xrpl/rpc/v1/submit.proto";
import "org/xrpl/rpc/v1/transaction.proto";
import "org/xrpl/rpc/v1/account_transaction_history.proto";


// RPCs available to interact with the XRP Ledger.
service XRPLedgerAPIService {

  // Get account info for an account on the XRP Ledger.
  rpc GetAccountInfo (GetAccountInfoRequest) returns (GetAccountInfoResponse);

  // Get the fee for a transaction on the XRP Ledger.
  rpc GetFee (GetFeeRequest) returns (GetFeeResponse);

  // Submit a signed transaction to the XRP Ledger.
  rpc SubmitTransaction (SubmitTransactionRequest) returns (SubmitTransactionResponse);

  // Get the status of a transaction
  rpc GetTransaction(GetTransactionRequest) returns (GetTransactionResponse);

  rpc GetAccountTransactionHistory(GetAccountTransactionHistoryRequest) returns (GetAccountTransactionHistoryResponse);
}
